# eqoxide_asset_server

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  compose.assets.yaml
content/: quests.json
docs/superpowers/plans/: 2026-06-25-multithreaded-build.md
docs/superpowers/specs/: 2026-06-25-multithreaded-build-design.md
scripts/: check-no-local-detail.sh
src/: audio.rs  auth.rs  bsp_regions.rs  build.rs  cas.rs  chunker.rs  db.rs  lib.rs  main.rs  manifest.rs  server.rs  sync_client.rs  water.rs  zone.rs
src/convert/: mod.rs
tests/: bake_zone.rs  build_cli.rs  build_zones.rs  convert.rs  db_account.rs  e2e_sync.rs  http_api.rs
